fixed overflow as overflow-y in main style

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ header{
 main{
     width: calc(100% - 250px);
     background-color: aqua;
+    overflow-y: scroll;
 }
 
 footer{
